--- a/templates/shiftTemplates/create_shift_template.html
+++ b/templates/shiftTemplates/create_shift_template.html
@@ -38,7 +38,7 @@
                         </div>
                         <div class="input-field col s4">
                             <i class="material-icons prefix">label</i>
-                            <label for="id_break_duration">Name</label>
+                            <label for="id_break_duration">Break</label>
                             <input type="time" name="break_duration" autofocus autocapitalize="none" maxlength="30" value="00:30" required id="id_break_duration" class="grey-text text-darken-4">
                             <span class="helper-text grey-text text-lighten-1" data-error="wrong" data-success="right">required</span>
                         </div>
