--- a/templates/base.html
+++ b/templates/base.html
@@ -24,12 +24,12 @@
         {% include 'registration/login.html' %}
 
         <ul id="userwidget" class="dropdown-content">
-            {% if not user.is_admin %}<li><a href="#!">My shifts</a></li>
-            <li class="divider"></li>{% endif %}
+            <li><a href="#!">My shifts</a></li>
+            <li><a href="{% url 'own_availabilities' %}">My general availabilities</a></li>
+            <li><a href="#!">My shift wishes</a></li>
+            <li class="divider"></li>
             <li><a href="{% url 'edit_basedata' %}">My base data</a></li>
             <li><a href="{% url 'change_password' %}">Change password</a></li>
-            {% if not user.is_admin %}<li><a href="#!">My general availabilities</a></li>
-            <li><a href="#!">My shift wishes</a></li>{% endif %}
             <li class="divider"></li>
             <li><a href="{% url 'logout' %}" class="amber-text text-darken-1">Logout</a></li>
         </ul>
@@ -93,7 +93,7 @@
                                         <div class="collapsible-body grey lighten-4 grey-text text-darken-4">
                                             <ul>
                                                 <li><a class="waves-effect waves-light"><i class="material-icons light-blue-text text-darken-1">view_list</i>Shifts</a></li>
-                                                <li><a class="waves-effect waves-light"><i class="material-icons light-blue-text text-darken-1">event_available</i>Availabilities</a></li>
+                                                <li><a class="waves-effect waves-light" href="{% url 'availabilities' %}"><i class="material-icons light-blue-text text-darken-1">event_available</i>Availabilities</a></li>
                                                 <li><a class="waves-effect waves-light"><i class="material-icons light-blue-text text-darken-1">event_note</i>Wishes</a></li>
                                                 {% if user.is_authorized %}<li><a class="waves-effect waves-light" href="{% url 'shift_templates' %}"><i class="material-icons light-blue-text text-darken-1">event</i>Shift templates</a></li>{% endif %}
                                                 {% if user.is_authorized %}<li><a class="waves-effect waves-light" href="{% url 'day_templates' %}"><i class="material-icons light-blue-text text-darken-1">event</i>Day templates</a></li>{% endif %}
