--- a/templates/availabilities/own_availabilities.html
+++ b/templates/availabilities/own_availabilities.html
@@ -4,7 +4,7 @@
 {% block content %}
     {% if user.is_authenticated %}
         <h3 class="light-blue-text text-darken-1">My general availabilities</h3>
-        <a class="waves-effect waves-light btn light-blue darken-1 right" href="{% url 'create_availability' %}"><i class="material-icons left">add</i>Create availability</a><br><br>
+        <a class="waves-effect waves-light btn light-blue darken-1 right" href="{% url 'add_own_availability' %}"><i class="material-icons left">add</i>Create availability</a><br><br>
         <div class="card">
             <div class="card-content">
                 <table class="striped highlight responsive-table">
@@ -35,7 +35,7 @@
                             <td>{{ entry.get_tendency_display }}</td>
                             <td>{{ entry.note }}</td>
                             <td>
-                                <a class="waves-effect waves-light btn amber darken-1" href="{% url 'edit_availability' entry.id %}"><i class="material-icons">edit</i></a>
+                                <a class="waves-effect waves-light btn amber darken-1" href="{% url 'edit_own_availability' entry.id %}"><i class="material-icons">edit</i></a>
                             </td>
                         </tr>
                         {% endfor %}
