--- a/templates/availabilities/availability_list.html
+++ b/templates/availabilities/availability_list.html
@@ -26,9 +26,9 @@
                             <td>{{ entry.get_weekday_display }}</td>
                             <td>
                                 {% if entry.is_available %}
-                                    <i class="material-icons left light-green-text text-darken-1">done</i>Yes
+                                    <i class="material-icons light-green-text text-darken-1">done</i>
                                 {% else %}
-                                    <i class="material-icons left red-text text-darken-1">close</i> No
+                                    <i class="material-icons red-text text-darken-1">close</i>
                                 {% endif %}
                             </td>
                             <td>{{ entry.employee.first_name }}<br><b>{{ entry.employee.last_name }}</b></td>
