--- a/templates/base.html
+++ b/templates/base.html
@@ -83,7 +83,7 @@
                                         <div class="collapsible-body grey lighten-4 grey-text text-darken-4">
                                             <ul>
                                                 <li><a class="waves-effect waves-light" href="{% url 'employees' %}"><i class="material-icons light-blue-text text-darken-1">view_list</i>Employees</a></li>
-                                                <li><a class="waves-effect waves-light"><i class="material-icons light-blue-text text-darken-1">event_busy</i>Absences</a></li>
+                                                <li><a class="waves-effect waves-light" href="{% url 'absences' %}"><i class="material-icons light-blue-text text-darken-1">event_busy</i>Absences</a></li>
                                                 <li><a class="waves-effect waves-light"><i class="material-icons light-blue-text text-darken-1">flight_takeoff</i>Holidays</a></li>
                                             </ul>
                                         </div>
