password reset done

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -17,6 +17,7 @@
             </div>
         </div>
         <div class="modal-footer">
+            <a class="waves-effect waves-light btn-flat light-blue-text text-darken-1" href="{% url 'password_reset' %}"><i class="material-icons left">question_mark</i>Forgot password</a>
             <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">login</i>Login</button>
         </div>
     </form>
