importers for qualifications, departments and users done

--- a/templates/base.html
+++ b/templates/base.html
@@ -77,7 +77,7 @@
                                                 <li><a class="waves-effect waves-light" href="{% url 'qualifications' %}"><i class="material-icons light-blue-text text-darken-1">label</i>Qualifications</a></li>
                                                 <li><a class="waves-effect waves-light" href="{% url 'departments' %}"><i class="material-icons light-blue-text text-darken-1">view_list</i>Departments</a></li>
                                                 <li><a class="waves-effect waves-light" href="{% url 'demand' %}"><i class="material-icons light-blue-text text-darken-1">date_range</i>Personnel demand</a></li>
-                                                {% if user.is_admin %}<li><a class="waves-effect waves-light"><i class="material-icons light-blue-text text-darken-1">cloud</i>Data management</a></li>{% endif %}
+                                                {% if user.is_admin %}<li><a class="waves-effect waves-light" href="{% url 'datamanagement' %}"><i class="material-icons light-blue-text text-darken-1">cloud</i>Data management</a></li>{% endif %}
                                             </ul>
                                         </div>
                                     </li>
