--- a/templates/users/user_list.html
+++ b/templates/users/user_list.html
@@ -3,20 +3,20 @@
 
 {% block content %}
     {% if user.is_admin %}
-        <h3 class="light-blue-text text-darken-1">Useraccounts</h3>
+        <h3 class="light-blue-text text-darken-1">Useraccounts ({{ all_entries.count }})</h3>
         <a class="waves-effect waves-light btn light-blue darken-1 right" href="{% url 'create_user' %}"><i class="material-icons left">person_add</i>Create user</a><br><br>
         <div class="card">
             <div class="card-content">
                 <table class="striped highlight responsive-table">
                     <thead class="light-blue-text text-darken-1">
                         <tr>
-                            <th>Username<br>E-Mail</th>
-                            <th>Staff ID<br>External</th>
                             <th>Last Name<br>First Name</th>
+                            <th>E-Mail<br>Username</th>
+                            <th>Staff ID<br>External</th>
                             <th>Address<br>Zip City</th>
                             <th>Telephone home<br>Telephone mobile</th>
                             <th>Start contract<br>End contract</th>
-                            <th>Role<br>verified</th>
+                            <th>Verified<br>Role</th>
                             <th>Active<br>Last login (UTC)</th>
                             <th>Edit</th>
                         </tr>
@@ -24,21 +24,42 @@
                     <tbody>
                         {% for entry in all_entries %}
                         <tr>
-                            <td>{{ entry.username }}<br>{{ entry.email }}</td>
+                            <td>{{ entry.first_name }}<br><b>{{ entry.last_name }}</b></td>
+                            <td>
+                                {{ entry.email }}<br>
+                                <span class="new badge grey darken-1 white-text z-depth-1" data-badge-caption="">
+                                    <b>{{ entry.username }}</b>
+                                </span>
+                            </td>
                             <td>
                                 {{ entry.staff_id }}<br>
-                                {% if entry.is_external %}External{% endif %}
+                                {% if entry.is_external %}
+                                    <span class="new badge grey darken-1 white-text z-depth-1" data-badge-caption="">
+                                        <b>External</b>
+                                    </span>
+                                {% endif %}
                             </td>
-                            <td>{{ entry.first_name }}<br><b>{{ entry.last_name }}</b></td>
                             <td>{{ entry.address }}<br>{{ entry.zip_city }}</td>
                             <td>{{ entry.telephone_home }}<br>{{ entry.telephone_mobile }}</td>
                             <td>{{ entry.start_contract|date:"Y-m-d" }}<br>{{ entry.end_contract|date:"Y-m-d" }}</td>
                             <td>
-                                {% if entry.role == 'A' %}Admin{% elif entry.role == 'P' %}Planner{% else %}Employee{% endif %}<br>
                                 {% if entry.is_verified %}
                                     <i class="material-icons light-green-text text-darken-1">done</i>
                                 {% else %}
                                     <i class="material-icons red-text text-darken-1">close</i>
+                                {% endif %}<br>
+                                {% if entry.role == 'A' %}
+                                <span class="new badge light-blue darken-1 white-text z-depth-1" data-badge-caption="">
+                                    <b>Admin</b>
+                                </span>
+                                {% elif entry.role == 'P' %}
+                                    <span class="new badge amber darken-1 black-text z-depth-1" data-badge-caption="">
+                                        <b>Planner</b>
+                                    </span>
+                                {% else %}
+                                    <span class="new badge grey darken-1 white-text z-depth-1" data-badge-caption="">
+                                        <b>Employee</b>
+                                    </span>
                                 {% endif %}
                             </td>
                             <td>
