importers for absences, holidays and demand done

--- a/templates/absences/add_own_absence.html
+++ b/templates/absences/add_own_absence.html
@@ -15,7 +15,7 @@
                         <div class="input-field col s4">
                             <i class="material-icons prefix">event_calendar</i>
                             <input id="id_start_date" name="start_date" type="text" class="datepicker grey-text text-darken-4">
-                            <label for="id_start_date">Date</label>
+                            <label for="id_start_date">Start date</label>
                             <!-- set today as default date -->
                             <script>$("#id_start_date").attr("value", new Date().toISOString().slice(0, 10))</script>
                             <span class="helper-text grey-text text-lighten-1" data-error="wrong" data-success="right">required</span>
@@ -23,7 +23,7 @@
                         <div class="input-field col s4">
                             <i class="material-icons prefix">event_calendar</i>
                             <input id="id_end_date" name="end_date" type="text" class="datepicker grey-text text-darken-4">
-                            <label for="id_end_date">Date</label>
+                            <label for="id_end_date">End date</label>
                             <!-- set today as default date -->
                             <script>$("#id_end_date").attr("value", new Date().toISOString().slice(0, 10))</script>
                             <span class="helper-text grey-text text-lighten-1" data-error="wrong" data-success="right">required</span>
