--- a/templates/absences/edit_absence.html
+++ b/templates/absences/edit_absence.html
@@ -30,13 +30,13 @@
                         <div class="input-field col s4">
                             <i class="material-icons prefix">event_calendar</i>
                             <input id="id_start_date" name="start_date" type="text" value="{{ selected_absence.start_date|date:"Y-m-d" }}" class="datepicker grey-text text-darken-4">
-                            <label for="id_start_date">Date</label>
+                            <label for="id_start_date">Start date</label>
                             <span class="helper-text grey-text text-lighten-1" data-error="wrong" data-success="right">required</span>
                         </div>
                         <div class="input-field col s4">
                             <i class="material-icons prefix">event_calendar</i>
                             <input id="id_end_date" name="end_date" type="text" value="{{ selected_absence.end_date|date:"Y-m-d" }}" class="datepicker grey-text text-darken-4">
-                            <label for="id_end_date">Date</label>
+                            <label for="id_end_date">End date</label>
                             <span class="helper-text grey-text text-lighten-1" data-error="wrong" data-success="right">required</span>
                         </div>
 
