--- a/templates/datamanagement/datamanagement.html
+++ b/templates/datamanagement/datamanagement.html
@@ -30,24 +30,59 @@
                         </a>
                     </li>
                     <li class="collection-item avatar">
-                        <a class="black-text" href="#">
+                        <a class="black-text" href="{% url 'import_absences' %}">
                             <i class="material-icons circle light-blue darken-1 white-text">event_busy</i>
                             <span class="title">Absences</span>
                             <p class="grey-text text-darken-3">Import Absences from .xlsx file</p>
                         </a>
                     </li>
                     <li class="collection-item avatar">
-                        <a class="black-text" href="#">
+                        <a class="black-text" href="{% url 'import_holidays' %}">
                             <i class="material-icons circle light-blue darken-1 white-text">flight_takeoff</i>
                             <span class="title">Holiday</span>
                             <p class="grey-text text-darken-3">Import Holidays from .xlsx file</p>
                         </a>
                     </li>
                     <li class="collection-item avatar">
-                        <a class="black-text" href="#">
-                            <i class="material-icons circle light-blue darken-1 white-text">date_range</i>
-                            <span class="title">Demands</span>
-                            <p class="grey-text text-darken-3">Import Demands from .xlsx file</p>
+                        <a class="black-text" href="{% url 'import_demand' %}">
+                            <i class="material-icons circle amber darken-1 white-text">date_range</i>
+                            <span class="title">Demand</span>
+                            <p class="grey-text text-darken-3">Import Demand from .xlsx file</p>
+                        </a>
+                    </li>
+                    <li class="collection-item avatar">
+                        <a class="black-text" href="{% url 'import_demand' %}">
+                            <i class="material-icons circle amber darken-1 white-text">event</i>
+                            <span class="title">Availabilities</span>
+                            <p class="grey-text text-darken-3">Import Availabilities from .xlsx file</p>
+                        </a>
+                    </li>
+                    <li class="collection-item avatar">
+                        <a class="black-text" href="{% url 'import_demand' %}">
+                            <i class="material-icons circle amber darken-1 white-text">event</i>
+                            <span class="title">Wishes</span>
+                            <p class="grey-text text-darken-3">Import Wishes from .xlsx file</p>
+                        </a>
+                    </li>
+                    <li class="collection-item avatar">
+                        <a class="black-text" href="{% url 'import_demand' %}">
+                            <i class="material-icons circle amber darken-1 white-text">event</i>
+                            <span class="title">Shift templates</span>
+                            <p class="grey-text text-darken-3">Import Shift templates from .xlsx file</p>
+                        </a>
+                    </li>
+                    <li class="collection-item avatar">
+                        <a class="black-text" href="{% url 'import_demand' %}">
+                            <i class="material-icons circle amber darken-1 white-text">event</i>
+                            <span class="title">Day templates</span>
+                            <p class="grey-text text-darken-3">Import Day templates from .xlsx file</p>
+                        </a>
+                    </li>
+                    <li class="collection-item avatar">
+                        <a class="black-text" href="{% url 'import_demand' %}">
+                            <i class="material-icons circle amber darken-1 white-text">view_list</i>
+                            <span class="title">Shifts</span>
+                            <p class="grey-text text-darken-3">Import Shifts from .xlsx file</p>
                         </a>
                     </li>
                 </ul>
